--- a/docs/selenium-jenkins.adoc
+++ b/docs/selenium-jenkins.adoc
@@ -28,7 +28,7 @@ Nombre y título del trabajo
 = Actividad 9. Pruebas de aceptación con Selenium
 
 Herramientas y Métodos en Ingeniería del Software
-Version 1.1, Junio-2020.
+Version 1.2, Marzo-2021.
 Joaquín Cañadas <jjcanada@ual.es>
 
 // Entrar en modo no numerado de apartados
@@ -43,10 +43,7 @@ Tests de aceptación con Selenium.
 ////
 COLOCA A CONTINUACIÓN LOS OBJETIVOS
 ////
-.Objetivos
-* Comenzar a crear tests de aceptación de aplicaciones web con Selenium IDE.
-* Crear y desplegar una plantilla de aplicación web que implemente un Login y Registro de usuario.
-* Exportar los test de Selenium IDE a Selenium Webdriver y ejecutar en Eclipse con distintos navegadores web (cross-browser testing). 
+.Objetivos 
 * Ejecutar los test de Selenium en Jenkins utilizando el navegador en modo _headless_.
 
 .Realización y entrega
@@ -58,230 +55,13 @@ La realización de estas actividades se realizará en equipo. La entrega será m
 :numbered:
 
 
-== Parte 2: Selenium WebDriver y Jenkins
+== Selenium WebDriver y Jenkins
 
 Selenium WebDriver permite ejecutar los tests de Selenium como tests de JUnit, permitiendo así su ejecución en Eclipse y Jenkins. 
 
-=== Exportar a JUnit
+La ejecución de los tests de Selenium en Jenkins debe hacerse en modo _headless_ ya que la máquina Jenkins no tiene instalada una interfaz gráfica, más comúnmente conocida como X o X11 en Linux. A pesar de ello, podremos hacerlo instalando un entorno de visualización simulado (`xvfb`). Veamos los pasos necesarios. Lo primero es descargar los drivers de los navegadores en la máquina de Jenkins. 
 
-Exporta a formato JUnit los tests grabados con Selenium IDE. Tendrás que hacerlo uno por uno, ya que por ahora Selenium IDE no permite exportarlos todos a la vez. 
-
-.Exportar test case
-image::selenium-ide-export-test.png[role="thumb", align="center"]
-
-.Exportar formato JUnit
-image::selenium-ide-export-test-junit.png[role="thumb", align="center"]
-
-Guarda los archivos `.java` en una carpeta. A continuación los importaremos en Eclipse.
-
-=== Cross-browser testing en Eclipse
-
-https://developer.mozilla.org/es/docs/Learn/Herramientas_y_pruebas/Cross_browser_testing[Cross-browser testing] o prueba de navegadores cruzados es el proceso de probar aplicaciones y sitios web en los navegadores web más habituales que los usuarios utilizan en la actualidad. En esta sección, vamos a ejecutar los tests de Selenium en dos navegadores: Firefox y Chrome. 
-
-Para ello utiliza como referencia el repositorio https://github.com/ualhmis/seleniumWebDriverJUnit que tiene ya configurado el `pom.xml` con las dependencias necesarias: 
-
-[IMPORTANT]
-====
-Los test de JUnit exportados por Selenium IDE están en formato JUnit 4. Para reutilizar al máximo y no tener que hacer demasiadas modificaciones, la dependencia en el `pom.xml` está configurada a *JUnit 4*.
-====
-
-. Un miembro del equipo clona el repositorio (previamente forkeado). Siguiendo el método de trabajo en equipo, el otro miembro forkea el repositorio del compañero y propondrá cambios mediante pull request.
-
-. Cada miembro del equipo crea una carpeta `drivers` en el proyecto en Eclipse. Y añade la carpeta al `.gitginore` para que el contenido no se guarde en el repositorio.
-
-[source]
-..gitignore
-----
-**/bin
-**/target
-**/drivers
-----
-
-
-[WARNING]
-====
-Es importante que los drivers específicos de los navegadores no se guarden en GitHub, ya que son archivos ejecutables (dependencias) específicos de la plataforma, que no deben versionarse. Cuando los necesites, tendrás que descargarlos. 
-====
-
-[start=3]
-. En es carpeta descarga los drivers de los navegadores Firefox y Chrome. Para ello: 
-.. Descarga y descomprime Firefox driver (Gecko Driver) de https://github.com/mozilla/geckodriver/releases eligiendo la versión adecuada para tu sistema.
-.. Descarga y descomprime Chrome driver de https://sites.google.com/a/chromium.org/chromedriver/downloads  eligiendo la versión adecuada para tu sistema y la versión de Chrome que tengas instalado.
-.. Con estos dos drivers es suficiente como prueba de concepto, pero puedes ver como descargar los drivers de otros navegadores aquí: https://www.selenium.dev/documentation/en/webdriver/driver_requirements/[Driver requirements].
-
-[start=4]
-. Crea un nuevo paquete en la carpeta test de nombre `org.ual.hmis.nombreEquipo` (sustituyendo `nombreEquipo` por el nombre de tu equipo). Ahí guarda los archivos `.java` exportados de Selenium IDE. Si has forkeado el proyecto de referencia, elimina los paquetes que contienen tests de ejemplo.
-
-. A continuación se indican unas mínimas modificaciones a cada archivo fuente `.java`: 
-.. Añade el paquete a cada archivo `.java`
-.. En el método `setUp()`, añade justo al principio las sentencias para configurar la ruta a cada driver:
-
-[source,java]
-----
-  @Before
-  public void setUp() throws Exception {
-    System.setProperty("webdriver.gecko.driver", "drivers/geckodriver.exe"); <1>
-    System.setProperty("webdriver.chrome.driver", "drivers/chromedriver.exe"); <2>
-    ...
-  }
-----
-<1> Son rutas relativas en el proyecto, dentro de `drivers` hemos descargado los drivers. Usa la ruta adecuada en tu caso.
-<2> Idem 
-
-[start=6]
-. Ejecuta los tests como JUnit Test. Verás que se abre Firefox y ejecuta los test automáticamente. 
-
-. Si un test *falla*, revisa el código y los pasos incluidos. Puede haber pasos que sobren, o que al exportarlos a JUnit tengas que adaptarlos a Java. Los fallos se pueden deber al selector que ha tomado automáticamente Selenium IDE. El https://www.browserstack.com/guide/locators-in-selenium[selector] identifica el elemento dentro de la página web sobre el que se ha interactuado, y para ello utiliza bien la referencia CSS o bien XPATH. Ve a Selenium IDE y cambia el selector, en la propiedad `target`; es recomendable utilizar la opción que identifica el elemento `id` pero si no tiene `id` utiliza el identificador por `xpath` y el texto que queremos seleccionar. Por ejemplo, en un comando `click`: 
-
-.Cambiar el selector de un elemento de la página
-image::selenium-ide-change-selector-xpath.png[role="thumb", align="center"]
-
-[TIP]
-====
-* Más información sobre los tipos de selectores (_locators_) en Selenium IDE: https://www.guru99.com/locators-in-selenium-ide.html[Locators in Selenium IDE: CSS Selector, DOM, XPath, Link Text, ID ]
-====
-
-También puede ser necesario añadir un tiempo de espera en medio de cada acción para que de tiempo a que se cargue el formulario, la página, etc. Por ejemplo, antes del primer `sendKeys` que escribe un texto en un campo de formulario, y también antes y después de `click()` en un botón de formulario. 
-
-.Añade una espera de 1 segundo (1000 mls)
-[source,java]
-----
-	    try {
-	        Thread.sleep(1000);
-	      } catch (InterruptedException e) {
-	        e.printStackTrace();
-	      }
-----
-
-[TIP]
-====
-Consulta en la sección FAQ el comando `waitForElementVisible`, una alternativa mejor a añadir segundos de espera fijos con `Time.sleep()`
-====
-
-[start=8]
-
-. A continuación vamos a probar en otro navegador, haciendo así lo que se denomina https://developer.mozilla.org/en-US/docs/Learn/Tools_and_testing/Cross_browser_testing/Introduction[_cross-browser testing]_. En los archivos `.java` cambia el driver a Chrome:
-
-
-[source,java]
-----
-  @Before
-  public void setUp() throws Exception {
-    ...
-    // driver = new FirefoxDriver();
-    driver = new ChromeDriver();
-    ...
-  }
-----
-
-Vuelve a ejecutar y verás que se abre Chrome y ejecuta el mismo test.
-
-[start=9]
-. Si un test se ejecuta correctamente en Firefox pero falla en Chrome realiza las siguientes comprobaciones:
-
-- comprueba el tamaño de la ventana, agrándala por si es el problema:
-
-    driver.manage().window().setSize(new Dimension(1080, 824));
-
-- modifica los selectores, en lugar de `cssSelector` utiliza `xpath`
-- Añade un tiempo de espera a que se cargue el formulario, antes del primer `sendKeys`, y también después de `click()` en un botón de formulario. 
-
-[source,java]
-----
-	    try {
-	        Thread.sleep(1000);
-	      } catch (InterruptedException e) {
-	        e.printStackTrace();
-	      }
-----
-
-
-=== Configurar un driver _headless_
-
-El modo _headless_ sirve para ejecutar los tests sin que se visualice la ventana del navegador. Esto hace que los tests se ejecuten más rápido y más eficientemente, y es especialmente adecuado en un entorno de Integración Continua como Jenkins. 
-
-==== Firefox en modo _headless_
-
-En local, para ejecutar Firefox en modo _headless_ añade las siguientes sentencias: 
-
-[source,java]
-----
-  @Before
-  public void setUp() throws Exception {
-    ...
-    FirefoxOptions firefoxOptions = new FirefoxOptions(); <1>
-    firefoxOptions.setHeadless(true); <2>
-    driver = new FirefoxDriver(firefoxOptions);
-    ...
-  }
-----
-<1> Define un nuevo objeto de opciones
-<2> Establece la opción _headless_ a `true`
-
-Además deberás añadir los imports necesarios (Eclipse te avisa de ello): 
-
-    import org.openqa.selenium.firefox.FirefoxOptions;
-
-Prueba a ejecutar los tests y verás que se ejecutan sin visualizar la ventana de Firefox. 
-
-[IMPORTANT]
-====
-Lanza los tests tanto con Eclipse como con Maven. Aseguraté de que se ejecutan correctamente con maven `test`.
-====
-
-==== ChromeDriver en modo _headless_
-
-ChromeDriver funciona de manera similar a Geckodriver de Firefox, e implementa la especificación  https://www.w3.org/TR/webdriver/[W3C WebDriver]. 
-
-En local, para ejecutar Chrome en modo _headless_: 
-
-[source,java]
-----
-  @Before
-  public void setUp() throws Exception {
-    ...
-    ChromeOptions chromeOptions = new ChromeOptions(); <1>
-    chromeOptions.setHeadless(true); <2>
-    driver = new ChromeDriver(chromeOptions);
-    ...
-  }
-----
-<1> Define un nuevo objeto de opciones
-<2> Establece la opción _headless_ a `true`
-
-Además deberás añadir los imports:
-
-    import org.openqa.selenium.chrome.ChromeOptions;
-
-Durante la ejecución no se abrirá la ventana de Chrome y los tests se ejecutarán correctamente. Lanza los test tanto con Eclipse como con Maven.
-
-
-==== HtmlUnit Driver: modo _headless_ nativo
-
-https://github.com/SeleniumHQ/selenium/wiki/HtmlUnitDriver[HtmlUnit Driver] es un driver _headless_ para Selenium Webdriver. Se trata de una implementación en Java de Webdriver. 
-
-En local, comenta los otros drivers y cambia el driver a `HtmlUnitDriver();`
-
-[source,java]
-----
-  @Before
-  public void setUp() throws Exception {
-    ...
-    // simple case - javascript support enabled
-    driver = new HtmlUnitDriver(BrowserVersion.FIREFOX_68, true)
-    ...
-  }
-----
-
-Debes importar la librería:
-
-    import org.openqa.selenium.htmlunit.HtmlUnitDriver;
-
-HtmlUnit Driver da muchos problemas, sobre todo con JavaScript. Es la versión reducida de un navegador, por lo que no soporta gran parte de la funcionalidad del mismo, y la mayoría de tests que funcionan para FirefoxDriver y ChromeDriver fallan con HtmlUnitDriver. Si te fallan los test HtmlUnitDriver *no te preocupes*. El modo _headless_ de FirefoxDriver y ChromeDriver nos ayudará a nuestro objetivo. 
-
-=== Ejecución en Jenkins
-
-La ejecución de los tests de Selenium en Jenkins debe hacerse en modo _headless_ ya que la maquina Jenkins no tiene una interfaz gráfica, más comúnmente conocida como X o X11 en Linux. A pesar de ello, tendremos que instalar un entorno de visualización simulado (`xvfb`). Veamos los pasos necesarios. Lo primero es descargar los drivers de los navegadores en la máquina de Jenkins. 
+=== Configuración 
 
 . En la carpeta JENKINS_HOME (si no recuerdas cual es, la predeterminada es `/var/lib/jenkins`, puedes verla en http://fake[http://_mi-jenkins-url_/systemInfo]) crea una carpeta `selenium-drivers` y descarga ahí los drivers de los navegadores Firefox y Chrome para Ubuntu. Para ello, ejecuta los siguientes comandos en la máquina Jenkins.
 
@@ -291,21 +71,22 @@ cd
 JENKINS_HOME=/var/lib/jenkins <1>
 echo $JENKINS_HOME
 mkdir $JENKINS_HOME/selenium-drivers <2>
-wget https://github.com/mozilla/geckodriver/releases/download/v0.26.0/geckodriver-v0.26.0-linux64.tar.gz
-sudo tar -C $JENKINS_HOME/selenium-drivers/ -xvf geckodriver-v0.26.0-linux64.tar.gz <3>
-wget https://chromedriver.storage.googleapis.com/83.0.4103.39/chromedriver_linux64.zip
+wget https://github.com/mozilla/geckodriver/releases/download/v0.29.0/geckodriver-v0.29.0-linux64.tar.gz
+sudo tar -C $JENKINS_HOME/selenium-drivers/ -xvf geckodriver-v0.29.0-linux64.tar.gz <3>
+wget https://chromedriver.storage.googleapis.com/89.0.4389.23/chromedriver_linux64.zip <4>
 sudo apt-get install unzip -y 
-sudo unzip chromedriver_linux64.zip -d $JENKINS_HOME/selenium-drivers/ <4>
-ls -la  $JENKINS_HOME/selenium-drivers/ <5>
-sudo chown jenkins:jenkins $JENKINS_HOME/selenium-drivers/ <6>
+sudo unzip chromedriver_linux64.zip -d $JENKINS_HOME/selenium-drivers/ <5>
+ls -la  $JENKINS_HOME/selenium-drivers/ <6>
+sudo chown jenkins:jenkins $JENKINS_HOME/selenium-drivers/ <7>
 sudo chown jenkins:jenkins $JENKINS_HOME/selenium-drivers/*
 ----
 <1> Declara la variable de entorno `JENKINS_HOME`
 <2> Crea la carpeta donde guardar los drivers de los navegadores. Asegúrate que tienes permisos suficientes. Si necesitas usar `sudo`, deberás de cambiar los permisos y grupos de los archivos al usuario `jenkins:jenkins` (ver paso 6).
 <3> Con `wget` descarga `geckodriver` para linux en la carpeta home, y con `tar -xvf` descomprime en la carpeta deseada.
-<4> Con `wget` descarga `chromedriver` para linux en la carpeta home, y con `unzip` descomprime en la carpeta deseada. Además has tenido que instalar `unzip`
-<5> Lista los archivos en la carpeta `selenium-drivers`. Comprueba que los permisos no son adecuados para que Jenkins pueda lanzar los ejecutables de los drivers. 
-<6> Asigna el grupo `jenkins:jenkins` a la carpeta y los archivos. Como resultado los archivos deben tener los permisos correctos
+<4> Con `wget` descarga `chromedriver` para linux en la carpeta home, pero antes revisa la https://www.ubuntuupdates.org/package/google_chrome/stable/main/base/google-chrome-stable[última versión estable] de Chrome para Ubuntu y usa la https://chromedriver.chromium.org/downloads[URL de descarga] de `chromedriver_linux64.zip` adecuada para la versión estable de Chrome
+<5> Con `unzip` descomprime en la carpeta deseada. Además has tenido que instalar `unzip`
+<6> Lista los archivos en la carpeta `selenium-drivers`. Comprueba que los permisos no son adecuados para que Jenkins pueda lanzar los ejecutables de los drivers. 
+<7> Asigna el grupo `jenkins:jenkins` a la carpeta y los archivos. Como resultado los archivos deben tener los permisos correctos
 
 .Permisos de los drivers
 image::jenkins-installed-selenium-drivers.png[role="thumb", align="center"]
@@ -315,7 +96,8 @@ image::jenkins-installed-selenium-drivers.png[role="thumb", align="center"]
     
     sudo apt-get install -y  xvfb firefox
 
-[start=3]
+=== Creación del pipeline en Jenkins
+
 . Crea en Jenkins un nuevo proyecto pipeline. Incluye la fase (_stage_) con nombre `Firefox tests`, donde llames a maven. Utiliza `xvfb-run` que se encarga de iniciar y parar `xvfb` por ti.  
 
     xvfb-run mvn test -Dwebdriver.gecko.driver=${JENKINS_HOME}/selenium-drivers/geckodriver 
@@ -406,76 +188,6 @@ image::jenkins-blueocean-parallel-browser-testing.png[role="thumb", align="cente
 
 . Crea dos fases en el pipeline, una para Firefox y otra para Chrome, y configura el pipeline para que se ejecuten en paralelo, usando el bloque https://www.jenkins.io/doc/book/pipeline/syntax/#parallel[`parallel`]. 
 ====
-
-== FAQ y resolución de problemas (_thoubleshouting_)
-
-- *Problema al actualizar un campo de texto que ya contiene un valor*. 
-Cuando un test de Selenium trata de actualizar el valor de un campo de texto que ya contiene un valor, por ejemplo al _modificar el email del perfil de usuario_, el test grabado con Selenium IDE simplemente captura los eventos que guardan el nuevo valor mediante un comando `type` y el nuevo valor se guarda en la propiedad _Value_. 
-
-.Comandos Selenium IDE para actualizar el email
-image::login-app-update-profile-ide-commands.png[role="thumb", align="center"]
-<1> Nuevo valor de email
-
-La siguiente imagen muestra la vista de la app web, antes de escribir el nuevo valor, muestra el valor antiguo.
-
-.Vista de la app web para actualizar el email (se muestra el valor antiguo)
-image::login-app-update-profile.png[role="thumb", align="center"]
-
-El problema se produce al exportar a JUnit el comando `type`, se traduce en una llamada al método `sendkeys("nuevoValor")`. Por ejemplo: 
-
-[source,java]
-----
-  driver.findElement(By.Id("email-address")).sendKeys("ualkk000@ual.es");
-----
-
-Y el método `sendkeys("nuevoValor")` *no reemplaza* el valor existente, sino que concatena el valor existente con el nuevo, algo asi: `ual-744547@\ual.esualkk000@ual.es`
-Para solucionar este problema simplemente hay que llamar al método `clear()`, que limpia el contenido del campo de texto, y tras ello escribir el nuevo valor con `sendKeys(...)`
-
-[source,java]
-----
-  driver.findElement(By.Id("email-address")).clear(); <1>
-  driver.findElement(By.Id("email-address")).sendKeys("ualkk000@ual.es");
-----
-<1> Añadir manualmente la llamada a `clear()` para limpiar el contenido del campo de texto.
-
-La llamada a `clear()` también será útil si se quiere probar el caso de dejar en blanco el campo `email`.
-
-- *Navegador headless queda ejecutándose en background*.
-Cuando falla la ejecución de un test de Selenium WebDriver en modo headless, el navegador puede quedar ejecutándose en background, pudiendo consumir recursos del sistema innecesariamente.
-
-.Decenas de procesos sin morir del navegador en modo headless
-image::google-chrome-procesos-sin-morir.png[role="thumb", align="center"]
-
-Es necesario revisar los procesos tanto en nuestra máquina local como en Jenkins y matarlos para evitar que queden ejecutándose consumiendo recursos.
-
-- *Alternativa a meter segundos de espera con Time.sleep()*. 
-En Selenium IDE existe el comando https://www.selenium.dev/selenium-ide/docs/en/api/commands#wait-for-element-visible[`waitForElementVisible`] que permite esperar hasta que un elemento esté visible. Aunque al grabar el test con Selenium IDE no es necesario añadir este comando, porque ya lo tiene implícito, cuando exportamos a WebDriver sí necesitamos meter las esperas. Por tanto *es recomendable* este comando en todos los pasos del test que veas que tarda en cargar la página.
-
-.Comando `waitForElementVisible`
-image::selenium-ide-waitForElementVisible.png[role="thumb", align="center"]
-
-En JUnit se convierte en: 
-
-.Código JUnit para `waitForElementVisible`
-image::selenium-webdriver-waitForElementVisible.png[role="thumb", align="center"]
-
-[source,java]
-----
-
-  // 9 | waitForElementVisible | xpath="//h2[contains(.,\'Ingeniería y Arquitectura\')]" | 30000 
-  {
-	  WebDriverWait wait = new WebDriverWait(driver, 30);
-    wait.until(ExpectedConditions.visibilityOfElementLocated(By.xpath("//h2[contains(.,\'Ingeniería y Arquitectura\')]")));
-  }
-----
-
-Otros métodos como la configuración de esperas implícitas y explícitas (`implicitlyWait`) no solucionan el problema, y aunque aparezcan en la documentación de Selenium y en los ejemplos, no dan el resultado esperado. Por ejemplo el método https://www.selenium.dev/selenium/docs/api/java/org/openqa/selenium/WebDriver.Timeouts.html#implicitlyWait-long-java.util.concurrent.TimeUnit-[implicitlyWait]: 
-
-    driver.manage().timeouts().implicitlyWait(30, TimeUnit.SECONDS);
-
-Se supone que establece la cantidad de tiempo qeu el driver debería esperar cuando busca un elemento si este no está presente inmediatamente. Sin embargo, no funciona como se espera y los errores no se solucionan.
-
-Así que la única forma es añadir manualmente tiempo de espera en cada paso que requiera tiempo de carga de los contenidos. Puesto que añadir un `sleep()` está desaconsejado, la mejor opción entonces es añadir comandos `waitForElementVisible`.
 
 
 == Más info
